[metadata]
name = tfx-helper
version = 0.0.3
author = Tomasz Maćkowiak
author_email = tomasz.mackowiak@dlabs.ai
description = A helper library for TFX
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dlabsai/tfx-helper
project_urls =
    Bug Tracker = https://github.com/dlabsai/tfx-helper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    tfx[kfp]>=1.6.1,<2
    google-cloud-aiplatform
    pydantic
    typing_extensions
    absl-py

[options.packages.find]
where = src
